[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantylab-client"
version = "1.0"
description = ""
authors = [
    { name = "Quantylab", email = "quantylab@gmail.com" }
]
readme = ""
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["quant", "trading", "research"]
urls = { Homepage = "https://github.com/quantylab/quantylab-client" }
dependencies = [
    "requests"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["quantylab.*"]
